--- a/wine-type-prediction.ipynb
+++ b/wine-type-prediction.ipynb
@@ -23,14 +23,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "# import model_evaluation_utils as meu\n",
     "from sklearn.model_selection import train_test_split\n",
     "from collections import Counter\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -43,6 +42,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import precision_recall_curve\n",
     "from sklearn.metrics import plot_precision_recall_curve\n",
     "from sklearn.metrics import cohen_kappa_score\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 6
     }
    ],
    "source": [
@@ -119,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['white' 'white' 'red' ... 'white' 'white' 'white']\n              precision    recall  f1-score   support\n\n         red       0.99      0.99      0.99       483\n       white       1.00      1.00      1.00      1467\n\n    accuracy                           0.99      1950\n   macro avg       0.99      0.99      0.99      1950\nweighted avg       0.99      0.99      0.99      1950\n\n0.9938461538461538\n0.9834876602014505\n"
+      "['white' 'white' 'red' ... 'white' 'white' 'white']\n              precision    recall  f1-score   support\n\n         red       0.99      0.99      0.99       483\n       white       1.00      1.00      1.00      1467\n\n    accuracy                           0.99      1950\n   macro avg       0.99      0.99      0.99      1950\nweighted avg       0.99      0.99      0.99      1950\n\n0.9938461538461538\n0.9938461538461538\n0.9834876602014505\n"
      ]
     }
    ],
@@ -136,6 +136,9 @@
     "print(wtp_lr_predictions)\n",
     "print(classification_report(wtp_test_y,wtp_lr_predictions, target_names=['red', 'white']))\n",
     "print(accuracy_score(wtp_test_y,wtp_lr_predictions))\n",
+    "wtp_confusion_matrix = confusion_matrix(wtp_test_y,wtp_lr_predictions)\n",
+    "accuracy = (wtp_confusion_matrix[0][0] + wtp_confusion_matrix[1][1]) / (wtp_confusion_matrix[0][0] + wtp_confusion_matrix[0][1] + wtp_confusion_matrix[1][0] + wtp_confusion_matrix[1][1])\n",
+    "print(accuracy)\n",
     "print(cohen_kappa_score(wtp_test_y, wtp_lr_predictions))"
    ]
   },
