price prediction error plot

--- a/wine-quality-prediction.ipynb
+++ b/wine-quality-prediction.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +118,22 @@
     "wqp_train_SX = wqp_ss.transform(wqp_train_X)\n",
     "# Scale the test set\n",
     "wqp_test_SX = wqp_ss.transform(wqp_test_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#training the set\n",
+    "wtp_lr = LogisticRegression()\n",
+    "wtp_lr.fit(wtp_train_SX, wtp_train_y)\n",
+    "\n",
+    "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+    "intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+    "penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+    "verbose=0, warm_start=False)"
    ]
   },
   {
@@ -670,6 +686,75 @@
     "print(classification_report(wqp_test_y,wqp_rf_predictions, target_names=wqp_label_names))\n",
     "print(\"accuracy\", accuracy_score(wqp_test_y,wqp_rf_predictions))\n",
     "print(\"kappa\", cohen_kappa_score(wqp_test_y, wqp_rf_predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Counter({'medium': 2748, 'low': 1659, 'high': 140}) Counter({'medium': 1167, 'low': 725, 'high': 58})\nFeatures: ['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar', 'chlorides', 'free sulfur dioxide', 'total sulfur dioxide', 'density', 'pH', 'sulphates', 'alcohol', 'wine_type_red', 'wine_type_white']\n"
+     ]
+    }
+   ],
+   "source": [
+    "wqp_features = wines.drop(columns=[\"quality\", \"quality_label\"])\n",
+    "wqp_features = pd.get_dummies(wqp_features)\n",
+    "wqp_class_labels = np.array(wines['quality_label'])\n",
+    "wqp_label_names = list(map(lambda x: str(x), wines['quality_label'].unique()))\n",
+    "wqp_feature_names = list(wqp_features.columns)\n",
+    "wqp_categories = list(wqp_features.columns.values)\n",
+    "wqp_train_X, wqp_test_X, wqp_train_y, wqp_test_y = train_test_split(wqp_features,\n",
+    "wqp_class_labels, test_size=0.3, random_state=42)\n",
+    "print(Counter(wqp_train_y), Counter(wqp_test_y))\n",
+    "print('Features:', wqp_feature_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the scaler\n",
+    "wqp_ss = StandardScaler().fit(wqp_train_X)\n",
+    "# Scale the train set\n",
+    "wqp_train_SX = wqp_ss.transform(wqp_train_X)\n",
+    "# Scale the test set\n",
+    "wqp_test_SX = wqp_ss.transform(wqp_test_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "              precision    recall  f1-score   support\n\n         low       0.00      0.00      0.00        58\n      medium       0.69      0.55      0.61       725\n        high       0.72      0.84      0.78      1167\n\n    accuracy                           0.71      1950\n   macro avg       0.47      0.47      0.46      1950\nweighted avg       0.69      0.71      0.69      1950\n\n0.7107692307692308\n[[  0   1  57]\n [  0 401 324]\n [  0 182 985]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#training the set\n",
+    "wqp_lr = LogisticRegression()\n",
+    "wqp_lr.fit(wqp_train_SX, wqp_train_y)\n",
+    "\n",
+    "LogisticRegression(C=1.0, class_weight=\"balanced\", dual=False, fit_intercept=True,\n",
+    "intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+    "penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+    "verbose=0, warm_start=False)\n",
+    "wqp_lr_predictions = wqp_lr.predict(wqp_test_SX)\n",
+    "\n",
+    "print(classification_report(wqp_test_y,wqp_lr_predictions, target_names=wqp_label_names))\n",
+    "print(accuracy_score(wqp_test_y,wqp_lr_predictions))\n",
+    "print(confusion_matrix(wqp_test_y,wqp_lr_predictions))"
    ]
   }
  ]
